// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strict options > {'noNodeTypesDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "off",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonBrowser': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "error",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonBrowser': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "off",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonBrowser': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "error",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "off",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "off",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "warn",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': false}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`strict options > {'noPackageJsonTypings': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`strict options > {'noReactDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "off",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noReactDomDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "off",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noReactDomTypesDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "off",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noReactIsPeerDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "off",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noReactIsPeerDependency': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noReactIsPeerDependency"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noReactIsPeerDependency\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noReactIsPeerDependency"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noReactIsPeerDependency\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noReactIsPeerDependency"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noReactIsPeerDependency\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noReactIsPeerDependency"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noReactIsPeerDependency\\" at \\"strictOptions.noReactIsPeerDependency\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noReactIsPeerDependency\\" at \\"strictOptions.noReactIsPeerDependency\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noReactIsPeerDependency\\" at \\"strictOptions.noReactIsPeerDependency\\""
  }
]]
`;

exports[`strict options > {'noReactTypesDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "off",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noRxjsPeerDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "off",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noSanityClientPeerDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "off",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noSanityDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "off",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noSanityUiPeerDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "off",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noStyledComponentsDependency': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "off",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'preferModuleType': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "error",
}
`;

exports[`strict options > {'preferModuleType': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "off",
}
`;

exports[`strict options > {'preferModuleType': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noNodeTypesDependency": "error",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "noReactDependency": "error",
  "noReactDomDependency": "error",
  "noReactDomTypesDependency": "error",
  "noReactIsPeerDependency": "error",
  "noReactTypesDependency": "error",
  "noRxjsPeerDependency": "error",
  "noSanityClientPeerDependency": "error",
  "noSanityDependency": "error",
  "noSanityUiPeerDependency": "error",
  "noStyledComponentsDependency": "error",
  "preferModuleType": "warn",
}
`;
